removed unused metrics

--- a/src/plugins/weather/render/weather.css
+++ b/src/plugins/weather/render/weather.css
@@ -13,7 +13,7 @@
   gap: 1dvh;
   width: 100%;
   height: 100%;
-  font-family: "Jost"
+  font-family: "Jost";
 }
 
 .header {
@@ -46,10 +46,9 @@
   width: 100%;
   font-weight: bold;
   line-height: 102%;
-  height: 100%;
 }
 
-.current-date {  
+.current-date {
   font-size: min(50cqh, 8cqi);
   text-align: center;
   align-content: end;
@@ -103,7 +102,6 @@
   top: 0.6em;
 }
 
-
 /* Data Points Grid */
 .data-points {
   display: grid;
@@ -138,14 +136,13 @@
   height: 100%;
   justify-content: center;
   container-type: size;
-
 }
 
 .data-point-label {
   font-size: min(32cqh, 15cqi);
   text-align: center;
   font-weight: lighter;
-  height: 30%
+  height: 30%;
 }
 
 .data-point-measurement,
@@ -158,6 +155,12 @@
   font-weight: bold;
   line-height: 105%;
   display: inline-block;
+}
+
+/* Larger measurement when no label */
+.data-point.no-label .data-point-measurement {
+  font-size: min(70cqh, 40cqi);
+  height: 100%;
 }
 
 .data-point-unit {
@@ -187,7 +190,7 @@
   border-radius: 1.2vw;
   min-width: 0;
   max-height: 100%;
-  gap: 0.5dvh
+  gap: 0.5dvh;
 }
 
 .forecast-day-name {
@@ -246,7 +249,7 @@
 }
 
 .separator {
-  border-top: 1px #AAA solid;
+  border-top: 1px #aaa solid;
   height: 1px;
   width: 90%;
   margin: 3px auto 0 auto;
@@ -288,7 +291,7 @@
 @media (max-aspect-ratio: 1) {
   .today-container {
     flex-direction: column;
-    gap: 1dvh
+    gap: 1dvh;
   }
 
   /* Current Weather Row */
@@ -306,7 +309,6 @@
   .data-point {
     height: 7dvh;
   }
-
 }
 
 @media (max-aspect-ratio: 1/2) {
@@ -314,7 +316,6 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
   }
-
 }
 
 @media (min-aspect-ratio: 2) {
@@ -322,7 +323,6 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
-
 }
 
 @media (max-width: 250px) {
