--- a/src/plugins/weather/render/weather.css
+++ b/src/plugins/weather/render/weather.css
@@ -17,6 +17,7 @@
 }
 
 .header {
+  height: min(30cqh, 6cqi);
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -48,7 +49,7 @@
 }
 
 .current-date {
-  font-size: min(40cqh, 7cqi);
+  font-size: min(30cqh, 6cqi);
   text-align: center;
   align-content: end;
   width: 100%;
@@ -163,12 +164,12 @@
 }
 
 .data-point.no-label .data-point-unit {
-  font-size: min(60cqh, 35cqi);
+  font-size: min(40cqh, 23cqi);
   height: 100%;
 }
 
 .data-point.no-label .wind-arrow-symbol {
-  font-size: min(60cqh, 35cqi);
+  font-size: min(40cqh, 23cqi);
   height: 100%;
 }
 
@@ -254,7 +255,8 @@
 
 .chart-container {
   width: 100%;
-  height: 24dvh;
+  height: 28dvh;
+  overflow: visible;
 }
 
 .separator {
