--- a/src/plugins/weather/render/weather.css
+++ b/src/plugins/weather/render/weather.css
@@ -17,7 +17,7 @@
 }
 
 .header {
-  height: 8dvh;
+  height: 6dvh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -49,7 +49,7 @@
 }
 
 .current-date {
-  font-size: 8dvh;
+  font-size: 6dvh;
   text-align: center;
   align-content: end;
   width: 100%;
@@ -147,7 +147,7 @@
 
 .data-point-measurement,
 .wind-arrow-symbol {
-  font-size: min(46cqh, 26cqi);
+  font-size: min(50cqh, 30cqi) !important;
   text-align: center;
   white-space: nowrap;
   align-content: center;
@@ -287,14 +287,14 @@
 }
 
 .min-max {
-  font-size: 12cqmin;
+  font-size: 14cqmin;
   text-align: center;
   position: relative;
   line-height: 140%;
 }
 
 .feels-like {
-  font-size: 10cqmin;
+  font-size: 12cqmin;
   text-align: center;
   position: relative;
   line-height: 140%;
